Support blind signing (#15)
* Enable credential schema attribute names to be generated at runtime, fix test

* Update tests from Haskell with blind signing capability

* Test framework: CreateIssuer types & hookup

* Test framework: CreateBlindSigningInfo types & hookup

* Test framework: SignCredentialWithBlinding types & hookup

* CreateSignerData; General/Specific split

* AC2C SpecificCreateSignerData (and use it for Authority)

* SpecificCreateSignerData - DNC

* Update tests - CreateSignerData

* insert_throw_if_present_2_lvl

* Blind signing related types

* Blind signing related interfaces

* create_blind_signing_info general

* fixup! CreateSignerData; General/Specific split

* AC2C backend

* create_blind_signing_info test framework

* createBlindSigningInfo for DNC

* Spelling for internal consistency and with Haskell changes

* Start step_sign_credential_with_blinding

* sign_with_blinded_attributes skeleton

* sign_with_blinded_attributes

* unblind_blinded_signature skeleton

* Finish step_sign_credential_with_blinding

* Eliminate doc comment too long warning

* Eliminate unnecessary explicit lifetime warnings

* Self-review: fix incorrect insert_throw_if_2_lvl

* TODO comment: add tests

* Implement unblind for DNC, one test passes

cargo test vcp::zkp_backends::dnc::run_json_zkp_functionality_tests::test_044_one_cred_blind_attribute_base_strict -- --nocapture

* Blinded signature to_api

* Implement sign_with_blinded_attributes for AC2C

* Implement unblind for AC2C, one test passes

cargo test vcp::zkp_backends::ac2c::run_json_zkp_functionality_tests::bbs::test_045 -- --nocapture

* Fix AC2C overrides; all AC2C-specific tests pass:

cargo test vcp::zkp_backends::ac2c::run_json_zkp_functionality_tests -- --skip expected_to_fail --skip overridden

* Fix test data with new signerBlindedAtrrIdxs in SignerPublicData

* Add test of insert_throw_if_absent_2lvl

* Address TODO - imports

* Address TODO - map error

* Address TODO - general checking for sig
