# src/vcp/zkp_backends/ac2c/to_from_api/signer_to_from_api.rs
@@ -1,30 +1,36 @@
+use crate::blind::BlindCredentialRequest;
 // ------------------------------------------------------------------------------
 use crate::vcp::VCPResult;
 use crate::vcp::r#impl::to_from_api::*;
 use crate::vcp::types::*;
 // ------------------------------------------------------------------------------
 use crate::knox::short_group_sig_core::short_group_traits::ShortGroupSignatureScheme;
-use crate::prelude::{CredentialBundle, Issuer, IssuerPublic};
+use crate::prelude::{BlindCredentialBundle, CredentialBundle, Issuer, IssuerPublic};
 use crate::prelude::blsful::{Bls12381G2Impl, SecretKey};
+use crate::prelude::blsful::inner_types::*;
 use crate::prelude::vb20;
 use crate::prelude::vb20::Coefficient;
 // ------------------------------------------------------------------------------
 
 // ------------------------------------------------------------------------------
 
-impl<S: ShortGroupSignatureScheme> VcpTryFrom<(IssuerPublic<S>, Vec<ClaimType>)> for SignerPublicData {
-    fn vcp_try_from((issuer_public, cts): (IssuerPublic<S>, Vec<ClaimType>)) -> VCPResult<SignerPublicData> {
+// TODO: this should not be for a triple, two components of which are not AC2C-specific
+impl<S: ShortGroupSignatureScheme> VcpTryFrom<(IssuerPublic<S>, Vec<ClaimType>, Vec<CredAttrIndex>)> for SignerPublicData {
+    fn vcp_try_from((issuer_public, sch, b_idxs): (IssuerPublic<S>, Vec<ClaimType>, Vec<CredAttrIndex>))
+                    -> VCPResult<SignerPublicData> {
          Ok(SignerPublicData {
              signer_public_setup_data : SignerPublicSetupData(to_opaque_json(&issuer_public)?),
-             signer_public_schema     : cts,
+             signer_public_schema     : sch,
+             signer_blinded_attr_idxs : b_idxs
          })
     }
 }
 
-impl<S: ShortGroupSignatureScheme> VcpTryFrom<&Box::<SignerPublicData>> for (IssuerPublic<S>, Vec<ClaimType>) {
-    fn vcp_try_from(x: &Box::<SignerPublicData>) -> VCPResult<(IssuerPublic<S>, Vec<ClaimType>)> {
+impl<S: ShortGroupSignatureScheme> VcpTryFrom<&Box::<SignerPublicData>> for
+    (IssuerPublic<S>, Vec<ClaimType>, Vec<CredAttrIndex>) {
+    fn vcp_try_from(x: &Box::<SignerPublicData>) -> VCPResult<(IssuerPublic<S>, Vec<ClaimType>, Vec<CredAttrIndex>)> {
         let ip : IssuerPublic<S> = from_opaque_json(&x.signer_public_setup_data.0)?;
-        Ok((ip, x.signer_public_schema.clone()))
+        Ok((ip, x.signer_public_schema.clone(), x.signer_blinded_attr_idxs.clone()))
     }
 }
 
@@ -66,6 +72,42 @@ impl<S: ShortGroupSignatureScheme> VcpTryFrom<CredentialBundle<S>> for Signature
 
 impl<S: ShortGroupSignatureScheme> VcpTryFrom<&Signature> for CredentialBundle<S> {
     fn vcp_try_from(x: &Signature) -> VCPResult<CredentialBundle<S>> {
+        from_opaque_json(&x.0)
+    }
+}
+
+impl<S: ShortGroupSignatureScheme> VcpTryFrom<BlindCredentialRequest<S>> for BlindInfoForSigner {
+    fn vcp_try_from(x: BlindCredentialRequest<S>) -> VCPResult<BlindInfoForSigner> {
+        Ok(BlindInfoForSigner(to_opaque_json(&x)?))
+    }
+}
+
+impl<S: ShortGroupSignatureScheme> VcpTryFrom<&BlindInfoForSigner> for BlindCredentialRequest<S> {
+    fn vcp_try_from(x: &BlindInfoForSigner) -> VCPResult<BlindCredentialRequest<S>> {
+        from_opaque_json(&x.0)
+    }
+}
+
+impl VcpTryFrom<Scalar> for InfoForUnblinding {
+    fn vcp_try_from(x: Scalar) -> VCPResult<InfoForUnblinding> {
+        Ok(InfoForUnblinding(to_opaque_json(&x)?))
+    }
+}
+
+impl VcpTryFrom<&InfoForUnblinding> for Scalar {
+    fn vcp_try_from(x: &InfoForUnblinding) -> VCPResult<Scalar> {
+        from_opaque_json(&x.0)
+    }
+}
+
+impl<S: ShortGroupSignatureScheme> VcpTryFrom<BlindCredentialBundle<S>> for BlindSignature {
+    fn vcp_try_from(x: BlindCredentialBundle<S>) -> VCPResult<BlindSignature> {
+        Ok(BlindSignature(to_opaque_json(&x)?))
+    }
+}
+
+impl<S: ShortGroupSignatureScheme> VcpTryFrom<&BlindSignature> for BlindCredentialBundle<S> {
+    fn vcp_try_from(x: &BlindSignature) -> VCPResult<BlindCredentialBundle<S>> {
         from_opaque_json(&x.0)
     }
 }
